# fuzzy_rep_sys

./: README.md  eigen.ipynb  experiment.py  pyproject.toml
src/fuzzy_rep_sys/: __init__.py
