[project]
name = "fuzzy-rep-sys"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "plein", email = "68096727+planetoryd@users.noreply.github.com" }
]
dependencies = [
    "scikit-fuzzy>=0.5.0",
    "ipykernel>=6.29.5",
    "pip>=25.1.1",
    "matplotlib>=3.10.3",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fuzzy_rep_sys"]
